Details
-
Bug
-
Status: Resolved
-
P3
-
Resolution: Fixed
-
14
-
b31
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8236792 | 15 | Igor Veresov | P3 | Resolved | Fixed | b05 |
Description
Tests
compiler/compilercontrol/CompilationModeHighOnlyTest.java
compiler/jvmci/events/JvmciNotifyBootstrapFinishedEventTest.java
compiler/profiling/spectrapredefineclass/Launcher.java
compiler/profiling/spectrapredefineclass_classloaders/Launcher.java
are sensitive to tiered compilation policy and fail when executed with custom tiered levels.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/compiler/tieredThresholdPolicy.cpp:464), pid=10883, tid=10886
# assert(level != CompLevel_full_profile && level != CompLevel_limited_profile) failed: C1 profiling levels shouldn't be used with intermediate levels disabled
#
# JRE version: Java(TM) SE Runtime Environment (14.0+27) (fastdebug build 14-ea+27-1339)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+27-1339, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x15c339d] TieredThresholdPolicy::compile(methodHandle const&, int, CompLevel, JavaThread*)+0x36d
#
compiler/compilercontrol/CompilationModeHighOnlyTest.java
compiler/jvmci/events/JvmciNotifyBootstrapFinishedEventTest.java
compiler/profiling/spectrapredefineclass/Launcher.java
compiler/profiling/spectrapredefineclass_classloaders/Launcher.java
are sensitive to tiered compilation policy and fail when executed with custom tiered levels.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/compiler/tieredThresholdPolicy.cpp:464), pid=10883, tid=10886
# assert(level != CompLevel_full_profile && level != CompLevel_limited_profile) failed: C1 profiling levels shouldn't be used with intermediate levels disabled
#
# JRE version: Java(TM) SE Runtime Environment (14.0+27) (fastdebug build 14-ea+27-1339)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+27-1339, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x15c339d] TieredThresholdPolicy::compile(methodHandle const&, int, CompLevel, JavaThread*)+0x36d
#
Attachments
Issue Links
- backported by
-
JDK-8236792 Some compiler tests fail when executed with custom TieredLevel
-
- Resolved
-
- relates to
-
JDK-8236136 tests which use CompilationMode shouldn't be run w/ TieredStopAtLevel
-
- Resolved
-
-
JDK-8227003 Add high-level JIT compilation mode control mechanism
-
- Resolved
-