8236050: Some compiler tests fail when executed with custom TieredLevel

Make sure TieredStopAtLevel is properly supported for different compilation modes

Reviewed-by: redestad, thartmann